fixed the issue with links into DMs and the scroll effect (not working on iphones)

--- a/style.css
+++ b/style.css
@@ -455,7 +455,8 @@ body {
   column-gap: 11.5rem;
   text-align: center;
   width: 93%;
-  overflow-x: scroll;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
   /* scroll-behavior: smooth; */
 }
 
